--- a/css/styles.css
+++ b/css/styles.css
@@ -63,14 +63,13 @@ body {
   line-height: 1.5;
   font-size: 0.875rem;
 }
+ul {
+  list-style-type: none;
+}
 a {
   text-decoration: none;
 }
-/* img:not(.nav-logo) {
-  width: 100%;
-  display: block;
-} */
-img {
+img:not(.nav-logo) {
   width: 100%;
   display: block;
 }
@@ -170,6 +169,64 @@ p {
 Navbar
 ===============
 */
+.navbar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--clr-white);
+  box-shadow: var(--dark-shadow);
+  z-index: 2;
+}
+.nav-icon{
+  display: none;
+}
+.nav-center{
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+}
+.nav-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding:1rem 2rem ;
+}
+.nav-toggle{
+  background: transparent;
+  border: transparent;
+  color: var(--clr-primary-5);
+  transition: var(--transition);
+  font-size: 1.5rem;
+  
+}
+.nav-toggle:hover{
+  transform: scale(1.2);
+}
+.nav-link{
+  display: block;
+  padding: 1rem 2rem;
+  text-transform: capitalize  ;
+  color: var(--clr-grey-1);
+  transition: var(--transition);
+  cursor: pointer;
+  font-size: 1rem;
+}
+.nav-link:hover{
+  color: var(--clr-primary-1);
+  background: var(--clr-primary-8);
+  padding-left:2.5rem;
+}
+/* 280px  */
+.nav-links{
+  height: 0;
+  overflow: hidden;
+  transition: var(--transition);
+}
+.show-links{
+  height: 280px;
+
+}
 
 /*
 =============== 
@@ -392,19 +449,174 @@ Featured Tours
   justify-content: space-between;
   flex-wrap: wrap;
 }
+.tour-title p,.tour-title h4{
+  margin-bottom: 0.75rem;
+  line-height: 1.25rem;
+}
 /*
 =============== 
-Deals
+Contact
 ===============
 */
+.contact{
+  background: var(--clr-primary-5);
+}
+.contact-title{
+  color: var(--clr-white);
+}
+.contact-title p{
+  color: var(--clr-primary-8);
+}
+.contact-form{
+  display: flex;
+  max-width: 28rem;
+}
+.form-control{
+  flex: 1 1 auto;
+  color: var(--clr-grey-5);
+}
+.form-control,.btn-submit{
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-weight: 300;
+  letter-spacing: var(--spacing);
+  background: var(--clr-white);
+  text-transform: capitalize;
+  border: transparent;
+}
+.form-control::placeholder{
+  color: inherit;
+}
+.btn-submit{
+  font-family: var(--ff-primary);
+  margin-left: 0.5rem;
+  background: var(--clr-primary-8);
+  color: var(--clr-primary-1);
+  cursor: pointer;
+  transition: var(--transition);
+}
+.btn-submit:hover{
+  background: var(--clr-primary-1);
+  color: var(--clr-primary-5);
+}
+@media screen and (min-width:992px) {
+  .contact-center{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .contact-form{
+    align-self: flex-start;
+    flex: 1 1 auto;
+    max-width: 100%;
+    padding-left: 2rem;
+  }
+}
 /*
 =============== 
 Gallery
 ===============
 */
+.gallery-img-container{
+  position: relative;
+  background: var(--clr-primary-5);
+}
+.gallery-icon{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 2rem;
+  transform: translate(-50%,-50%);
+  opacity: 0;
+  cursor: pointer;
+  transition: var(--transition);
+}
+.gallery-img{
+  height: 17rem;
+  object-fit: cover;
+  transition: var(--transition);
+}
+.gallery-img-container:hover .gallery-img{
+  opacity: 0.5;
+}
+.gallery-img-container:hover .gallery-icon{
+  opacity: 1;
+}
+@media screen and (min-width:768px) {
+  .gallery-center{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .gallery-img-container{
+    flex: 0 0 50%;
+  }
+}
+@media screen and (min-width:992px) {
+  .gallery-img-container{
+    flex: 0 0 25%;
+  }
+}
 
 /*
 =============== 
 Footer
 ===============
 */
+.footer{
+  background: var(--clr-grey-1);
+  text-align: center;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.footer-links,.footer-icons{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+  flex-wrap: wrap;
+}
+.footer-link{
+  color: var(--clr-white);
+  font-size: 1rem;
+  margin-right: 1rem;
+  letter-spacing:var(--spacing);
+  transition: var(--transition);
+}
+.footer-link:hover{
+  color: var(--clr-primary-5);
+
+}
+.footer-icon{
+  font-size: 2rem;
+  margin-right: 1rem;
+  color: var(--clr-primary-8);
+  transition: var(--transition);
+
+}
+.footer-icon:hover{
+  color: var(--clr-primary-5);
+}
+.copyright{
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  color: var(--clr-white);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
