auto-prefix extentions

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ p {
   letter-spacing: var(--spacing);
   display: inline-block;
   /* font-weight: 700; */
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   font-size: 0.875rem;
   border: 2px solid transparent;
@@ -187,27 +188,33 @@ Navbar
   margin: 0 auto;
 }
 .nav-header{
+  display: -webkit-box;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+          align-items: center;
   padding:1rem 2rem ;
 }
 .nav-toggle{
   background: transparent;
   border: transparent;
   color: var(--clr-primary-5);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   font-size: 1.5rem;
   
 }
 .nav-toggle:hover{
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 .nav-link{
   display: block;
   padding: 1rem 2rem;
   text-transform: capitalize  ;
   color: var(--clr-grey-1);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   cursor: pointer;
   font-size: 1rem;
@@ -221,6 +228,7 @@ Navbar
 .nav-links{
   height: 0;
   overflow: hidden;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .show-links{
@@ -236,14 +244,18 @@ Navbar
     display: none;
   }
   .nav-center{
+    display: -webkit-box;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+            align-items: center;
     /* optional */
     flex-wrap: wrap;
   }
   .nav-links{
     height: auto;
+    display: -webkit-box;
     display: flex;
   }
   .nav-header{
@@ -259,12 +271,14 @@ Navbar
     background: transparent;
   }
 .nav-icons{
+  display: -webkit-box;
   display: flex;
 }
 .nav-icon{
   margin-right: 0.7rem;
   color: var(--clr-primary-5);
   font-size: 1.2rem;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .nav-icon:hover{
@@ -282,9 +296,12 @@ Hero
 .hero {
   min-height: 100vh;
   background: var(--clr-primary-5);
+  display: -webkit-box;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
 }
 .hero-banner {
   text-align: center;
@@ -314,6 +331,8 @@ Hero
 }
 @media screen and (min-width: 768px) {
   .hero {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgb(44, 174, 186, 0.7)), to(rgba(0, 0, 0, 0.7))),
+      url("../images/main.jpeg") center/cover no-repeat;
     background: linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.7)),
       url("../images/main.jpeg") center/cover no-repeat;
   }
@@ -338,13 +357,16 @@ About
 }
 @media screen and (min-width: 992px) {
   .about-center {
+    display: -webkit-box;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+            justify-content: space-between;
     flex-wrap: wrap;
   }
   .about-img,
   .about-info {
-    flex: 0 0 calc(50% - 2rem);
+    -webkit-box-flex: 0;
+            flex: 0 0 calc(50% - 2rem);
     margin-bottom: 0;
     align-self: center;
   }
@@ -396,22 +418,27 @@ Services
 }
 @media screen and (min-width: 576px) {
   .services-center {
+    display: -webkit-box;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+            justify-content: space-between;
     flex-wrap: wrap;
   }
   .service {
-    flex: 0 0 calc(50% - 1rem);
+    -webkit-box-flex: 0;
+            flex: 0 0 calc(50% - 1rem);
     margin-bottom: 1rem;
   }
 }
 @media screen and (min-width: 992px) {
   .service {
-    flex: 0 0 calc(33.333% - 1rem);
+    -webkit-box-flex: 0;
+            flex: 0 0 calc(33.333% - 1rem);
   }
 }
 @media screen and (min-width: 1170px) {
   .service {
+    display: -webkit-box;
     display: flex;
     text-align: left;
   }
@@ -431,6 +458,7 @@ Featured Tours
 ===============
 */
 .tour-card {
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   background: var(--clr-grey-10);
   box-shadow: var(--light-shadow);
@@ -438,14 +466,16 @@ Featured Tours
 }
 .tour-card:hover {
   box-shadow: var(--dark-shadow);
-  transform: scale(1.02);
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
 }
 .tour-img-container {
   position: relative;
 }
 .tour-img {
   height: 15rem;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .tour-date {
   position: absolute;
@@ -461,10 +491,13 @@ Featured Tours
   padding: 1.25rem 1.5rem;
 }
 .tour-footer {
+  display: -webkit-box;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
   flex-wrap: wrap;
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
 }
 .tour-footer p {
   line-height: 0;
@@ -477,22 +510,28 @@ Featured Tours
 }
 @media screen and (min-width: 768px) {
   .featured-center {
+    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+            justify-content: space-between;
   }
   .tour-card {
-    flex: 0 0 calc(50% - 2rem);
+    -webkit-box-flex: 0;
+            flex: 0 0 calc(50% - 2rem);
   }
 }
 @media screen and (min-width: 1170px) {
   .tour-card {
-    flex: 0 0 calc(33.333% - 2rem);
+    -webkit-box-flex: 0;
+            flex: 0 0 calc(33.333% - 2rem);
   }
 }
 .tour-title{
+  display: -webkit-box;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
   flex-wrap: wrap;
 }
 .tour-title p,.tour-title h4{
@@ -514,11 +553,13 @@ Contact
   color: var(--clr-primary-8);
 }
 .contact-form{
+  display: -webkit-box;
   display: flex;
   max-width: 28rem;
 }
 .form-control{
-  flex: 1 1 auto;
+  -webkit-box-flex: 1;
+          flex: 1 1 auto;
   color: var(--clr-grey-5);
 }
 .form-control,.btn-submit{
@@ -531,6 +572,18 @@ Contact
   text-transform: capitalize;
   border: transparent;
 }
+.form-control::-webkit-input-placeholder{
+  color: inherit;
+}
+.form-control::-moz-placeholder{
+  color: inherit;
+}
+.form-control:-ms-input-placeholder{
+  color: inherit;
+}
+.form-control::-ms-input-placeholder{
+  color: inherit;
+}
 .form-control::placeholder{
   color: inherit;
 }
@@ -540,6 +593,7 @@ Contact
   background: var(--clr-primary-8);
   color: var(--clr-primary-1);
   cursor: pointer;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .btn-submit:hover{
@@ -548,13 +602,16 @@ Contact
 }
 @media screen and (min-width:992px) {
   .contact-center{
+    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+            justify-content: space-between;
   }
   .contact-form{
     align-self: flex-start;
-    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+            flex: 1 1 auto;
     max-width: 100%;
     padding-left: 2rem;
   }
@@ -573,14 +630,18 @@ Gallery
   top: 50%;
   left: 50%;
   font-size: 2rem;
-  transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
   opacity: 0;
   cursor: pointer;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .gallery-img{
   height: 17rem;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .gallery-img-container:hover .gallery-img{
@@ -591,16 +652,19 @@ Gallery
 }
 @media screen and (min-width:768px) {
   .gallery-center{
+    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
   }
   .gallery-img-container{
-    flex: 0 0 50%;
+    -webkit-box-flex: 0;
+            flex: 0 0 50%;
   }
 }
 @media screen and (min-width:992px) {
   .gallery-img-container{
-    flex: 0 0 25%;
+    -webkit-box-flex: 0;
+            flex: 0 0 25%;
   }
 }
 
@@ -616,8 +680,10 @@ Footer
   padding-right: 2rem;
 }
 .footer-links,.footer-icons{
+  display: -webkit-box;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
   margin-bottom: 1.5rem;
   flex-wrap: wrap;
 }
@@ -626,6 +692,7 @@ Footer
   font-size: 1rem;
   margin-right: 1rem;
   letter-spacing:var(--spacing);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .footer-link:hover{
@@ -636,6 +703,7 @@ Footer
   font-size: 2rem;
   margin-right: 1rem;
   color: var(--clr-primary-8);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 
 }
